@@ -1,6 +1,16 @@
+Sun Apr 19 17:40:12 BST  2015  Lee Noar  <leenoar@sky.com>
+
+	* stdlib/atexit.c: It seems that __cxa_finalize can be called
+	recursively, so removing entries from the list as we step
+	through it is not a good idea. When returning from a recursive
+	call, our next entry may no longer exist. Instead, just mark
+	the entries as finished without removing them. As __cxa_finalize
+	is usually called at program exit, the loss of memory shouldn't
+	be an issue.
+
 Thu Mar 26 18:33:45 GMT  2015  Lee Noar  <leenoar@sky.com>
 
-	Submitted by Jeffery Lee <me@phlamethrower.co.uk>
+	Submitted by Jeffrey Lee <me@phlamethrower.co.uk>
 
 	* fenv/fclrexcpt.c(feclearexcept): Add support for VFP.
 	* incl-local/pthread.h(__pthread_saved_context): Likewise.
